# vedirect-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: basic.yml  test.yml
benches/: benchmarks.rs
data/samples/mppt/: mppt_75_15.txt
examples/: read_serial.rs  serialport.rs
fuzz-target/: Cargo.toml  README.md  run-fuzzer.sh
fuzz-target/in/: noise  start1  start2
fuzz-target/src/: main.rs
src/: Parse.rs  VEError.rs  bmv.rs  checksum.rs  constants.rs  data.rs  firmware_version.rs  frame_builder.rs  lib.rs  map.rs  mppt.rs  parser.rs  phoenix.rs  products.rs  serial_number.rs  types.rs  utils.rs  ve_error.rs
src/frames/: base.rs  bmv.rs  mod.rs  mppt_frame.rs
