[package]
name = "vedirect"
version = "0.1.0"
authors = ["dbr <dbr.onix@gmail.com>", "chevdor <chevdor@gmail.com>"]
edition = "2018"

license = "Unlicense"
description = "Library to parse the Victron Energy VE.Direct protocol and map the data to useful structs with clear units"
repository = "https://github.com/dbr/vedirect-rs/"
readme = "README.md"
keywords = ["solar", "serial", "parser"]

[dependencies]
nom = "5.1"
thiserror = "1.0"
num-derive = "0.3.2"
num-traits = "0.2.12"
modulo = "0.1.2"

[dev-dependencies]
clap = "2.33.3"
serial = "0.4"
serialport = "3.3.0"
anyhow = "1.0"
