[package]
name = "vedirect"
version = "0.1.0"
authors = ["dbr <dbr.onix@gmail.com>", "chevdor <chevdor@gmail.com>"]
edition = "2018"

license = "Unlicense"
description = "Library to parse the Victron Energy VE.Direct protocol and map the data to useful structs with clear units"
repository = "https://github.com/dbr/vedirect-rs/"
readme = "README.md"
keywords = ["solar", "serial", "parser"]

[dependencies]
nom = "5.1"
thiserror = "1.0"
num-derive = "0.3.2"
num-traits = "0.2.12"
semver = "0.11.0"
regex = "1.4.1"
serialport = { version = "3.3.0", optional = true }
criterion = "0.3.3"

[dev-dependencies]
clap = "2.33.3"
anyhow = "1.0"
serial = "0.4"

[features]
com_serialport = ["serialport"]

[[bench]]
name = "benchmarks"
harness = false
